[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = ""
authors = ["Enrique Gimenez <me@enrique.digital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
